completed test posts

--- a/testClientCode/test.html
+++ b/testClientCode/test.html
@@ -4,12 +4,14 @@
  <script src="testscipts.js"></script>  
 </head>
 <body> 
+<p id="update"></p>
 
 <form id="uploadForm">
      <input type="file" name="myimage" id="imageid" accept=".jpg" />
-     <button onclick="whytho()">press</button>
-</form>
+     <button id="sub" onclick="whytho(event)">press</button>
+</form> 
 
 
+<button onclick="tryme()">nice one budd :^)</button>
 </body>
 </html>
